# brigid

./: CONTRIBUTING.md  Cargo.toml  README.md  error.rs  historical-startup-notes.md  init.sh  nomos.md
ArgosCI/: config.json
examples/: advanced_csv.rs  full_environment.rs  general.rs  persistence.rs  simple_config.rs
src/: builder.rs  content.rs  directory.rs  error.rs  file.rs  lib.rs  sys_warning.rs
tests/: advanced.rs  errors.rs  establishment.rs  persistance.rs  raw_file.rs  system.rs
