[package]
name = "brigid"
version = "1.2.0"
edition = "2024"

[dependencies]
athena = { git = "https://github.com/xqhare/athena.git", features = ["process"] }
nabu = { git = "https://github.com/xqhare/nabu.git" }
mawu = { git = "https://github.com/xqhare/mawu.git" }
nemesis = { git = "https://github.com/xqhare/nemesis.git" }
